--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,18 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha4'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
+    androidTestImplementation 'androidx.test:runner:1.2.0-alpha03'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha03'
     implementation 'com.google.android.material:material:1.1.0-alpha05'
+
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    //rxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    //因为rxAndroid版本少，所以可以引入最新版的rxjava，来避免一些bug和使用新属性
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    //lambda表达式是jdk1.8提供的表达式，只需要升级android studio的jdk版本即可。
 }
