lifecycle试用（未理解）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.NameActivity" />
+        <activity android:name=".activity.LifecycleActivity" />
 
         <service android:name=".service.MyIntentService" />
     </application>
